feat(docs): rename login to token and sort swagger tags
