# src/adapters/routes/auth.ts
@@ -11,11 +11,11 @@ const userService = new UserService(userRepository)
 const authService = new AuthService(userRepository)
 const authController = new AuthController(userService, authService)
 
-authRouter.post('/login', (req: Request, res: Response, next: NextFunction) => {
+authRouter.post('/token', (req: Request, res: Response, next: NextFunction) => {
 /*  
   #swagger.tags = ['Auth']
   #swagger.requestBody = { required: true, schema: { $ref: "#/definitions/LoginBody" } }
   #swagger.responses[200] = { schema:{ $ref: "#/definitions/LoginResponse" } } 
 */
-  authController.login(req, res, next)
+  authController.token(req, res, next)
 })
